--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jotai": "^2.12.5",
     "lodash": "^4.17.21",
