--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "input-otp": "^1.4.2",
     "iron-session": "^8.0.4",
     "jotai": "^2.12.5",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
